fix - autorizacao do front-end